# elfish

./: .gitignore  CMakeLists.txt  README.md
analysis/: functions.txt  ne_header.txt  segments.md
runtime/: cpu.h  main.c  segments.h  tsxlib_stubs.c
src/: seg111.c  seg112.c  seg113.c  seg114.c  seg115.c  seg116.c  seg117.c  seg118.c  seg119.c  seg120.c  seg121.c  seg122.c  seg123.c  seg124.c  seg125.c  seg126.c  seg127.c  seg128.c  seg129.c  seg130.c  seg131.c  seg132.c  seg133.c  seg134.c  seg135.c  seg136.c  seg137.c  seg138.c  seg139.c  seg140.c  seg141.c  seg142.c  seg143.c  seg144.c  seg145.c  seg146.c  seg147.c  seg148.c  seg149.c  seg150.c  (+81 more)
tools/: fpu_decode.py  ne_decode.py  ne_lift.py  ne_parse.py  ne_xref.py  tsxlib.py
